[package]
name = "pywry"
version = "0.5.2"
edition = "2021"
include = ["src/", "Cargo.toml", "LICENSE", "README.md"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pywry"
crate-type = ["cdylib"]
path = "src/lib.rs"


[dependencies]
pyo3 = { version = "0.18.0", features = [
    "extension-module",
    "generate-import-lib",
] }
wry = { version = "^0.28", features = ["devtools"] }
image = { version = "^0.24.5", default-features = false, features = ["png"] }
tokio = { version = "^1.23.0", features = ["rt", "rt-multi-thread", "full"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
mime_guess = "^2.0"
urlencoding = "^2.1.2"
open = "^4.0"
