[package]
name = "pywry" # Package name
version = "0.6.2"
edition = "2021"
include = ["src/", "Cargo.toml", "LICENSE", "README.md", "build.rs"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "pywry"
path = "src/main.rs"


[dependencies]
wry = { version = "0.31.0", features = ["devtools"] }
image = { version = "^0.24.7", default-features = false, features = ["png"] }
tokio = { version = "^1.35.0", features = ["rt", "rt-multi-thread", "full"] }
serde = { version = "^1.0.189", features = ["derive"] }
serde_json = "^1.0.107"
mime_guess = "^2.0"
urlencoding = "^2.1.3"
open = "^5.0"
rand = "^0.8.4"
simple-home-dir = "^0.2.0"
